# solana-rust-vscode-course

./: .gitignore  Cargo.toml  README.md  book.toml  course.toml  justfile  project-description.md
.course/baseline/exercises/01_keypairs/src/: lib.rs
.course/baseline/exercises/02_airdrop_balance/tests/: airdrop_balance.rs
.course/baseline/exercises/03_send_sol/: Cargo.toml
.course/baseline/exercises/03_send_sol/src/: lib.rs
.course/baseline/exercises/04_token_metadata/src/: lib.rs
.course/baseline/exercises/04_token_metadata/tests/: token_metadata.rs
.course/baseline/exercises/05_mint_to_tokens/tests/: mint_to_tokens.rs
.course/baseline/exercises/07_transfer_checked_tokens/: Cargo.toml
.course/baseline/exercises/07_transfer_checked_tokens/src/: lib.rs
.course/baseline/exercises/08_close_token_account/: Cargo.toml
.course/baseline/exercises/09_metaplex_core_nft/tests/: metaplex_core_nft.rs
.course/baseline/exercises/10_rpc_client_basics/src/: lib.rs
.course/baseline/exercises/10_rpc_client_basics/tests/: rpc_client_basics.rs
.course/baseline/exercises/11_wallet_file/: Cargo.toml
.course/baseline/exercises/11_wallet_file/tests/: wallet_file.rs
.course/baseline/exercises/12_account_info/: Cargo.toml
.course/baseline/exercises/12_account_info/src/: lib.rs
.course/baseline/exercises/13_confirm_signature/: Cargo.toml
.course/baseline/exercises/13_confirm_signature/src/: lib.rs
.course/baseline/exercises/15_pda_derivation/: Cargo.toml
.course/baseline/exercises/15_pda_derivation/src/: lib.rs
book/src/: 01-keypairs.md  02-airdrop-balance.md  03-send-sol.md  04-token-metadata.md  05-mint-to-tokens.md  06-associated-token-account.md  07-transfer-checked-tokens.md  08-close-token-account.md  09-metaplex-core-nft.md  10-rpc-client-basics.md  11-wallet-file.md  12-account-info.md  13-confirm-signature.md  14-rent-create-account.md  15-pda-derivation.md  16-simulate-transaction.md  SUMMARY.md
crates/course-runner/: Cargo.toml
crates/course-runner/src/: check.rs  fs_utils.rs  main.rs  manifest.rs  reset.rs  surfpool.rs
crates/course-runner/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs  wsl.rs
crates/course-runner/src/ui/: install.rs  mod.rs  vsix.rs
exercises/01_keypairs/: Cargo.toml
exercises/01_keypairs/src/: lib.rs
exercises/01_keypairs/tests/: keypairs.rs
exercises/02_airdrop_balance/: Cargo.toml
exercises/02_airdrop_balance/src/: lib.rs
exercises/03_send_sol/src/: lib.rs
exercises/03_send_sol/tests/: send_sol.rs
exercises/04_token_metadata/: Cargo.toml
exercises/05_mint_to_tokens/: Cargo.toml
exercises/05_mint_to_tokens/src/: lib.rs
exercises/06_associated_token_account/: Cargo.toml
exercises/06_associated_token_account/src/: lib.rs
exercises/06_associated_token_account/tests/: associated_token_account.rs
exercises/07_transfer_checked_tokens/tests/: transfer_checked_tokens.rs
exercises/08_close_token_account/src/: lib.rs
exercises/08_close_token_account/tests/: close_token_account.rs
exercises/09_metaplex_core_nft/: Cargo.toml
exercises/09_metaplex_core_nft/src/: lib.rs
exercises/10_rpc_client_basics/: Cargo.toml
exercises/11_wallet_file/src/: lib.rs
exercises/12_account_info/tests/: account_info.rs
exercises/13_confirm_signature/tests/: confirm_signature.rs
exercises/14_rent_create_account/: Cargo.toml
exercises/14_rent_create_account/src/: lib.rs
exercises/14_rent_create_account/tests/: rent_create_account.rs
exercises/15_pda_derivation/tests/: pda_derivation.rs
exercises/16_simulate_transaction/: Cargo.toml
exercises/16_simulate_transaction/src/: lib.rs
exercises/16_simulate_transaction/tests/: simulate_transaction.rs
vscode-extension/: README.md  extension.js  package.json
