[package]
name = "exercise_05_mint_to_tokens"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
solana-address.workspace = true
solana-instruction.workspace = true
solana-keypair.workspace = true
solana-signer.workspace = true
spl-token-2022-interface.workspace = true
