[package]
name = "exercise_11_wallet_file"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
solana-address.workspace = true
solana-keypair.workspace = true
solana-signer.workspace = true
