[package]
name = "exercise_13_confirm_signature"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
solana-address.workspace = true
solana-client.workspace = true
solana-commitment-config.workspace = true
solana-keypair.workspace = true
solana-signature.workspace = true
solana-signer.workspace = true
